--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.output.ansi.enabled=detect
 # 数据库配置
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/jd?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Aa162534
+spring.datasource.password=******
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
